Zavrserna about as strana i dodatai filteri na stranici list

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
 }
 body {
     box-sizing: border-box;
-    background: url("./backgorund.jpg") no-repeat;
+    background: url("./img/backgorund.jpg") no-repeat;
     background-size: cover;
     display: flex;
     flex-direction: column;
